fix the extra space at the top of the pop-up window

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -165,8 +165,9 @@
 
   #popup-content {
     width: 70%;
-    margin: 20% 0;
-    padding-bottom: 50px;
+    margin: 0;
+    top: 50%;
+    padding: 50px 12px;
   }
 
   #popup-img {
@@ -178,7 +179,7 @@
 
   .project-skills {
     display: flex;
-    gap: 20px;
+    gap: 40px;
   }
 
   #popup-description {
