--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,7 @@ body.active {
 }
 
 #popup-content {
-  margin-top: 30%;
+  
   position: absolute;
   top: 50%;
   left: 50%;
